# ChangeLog for x11-misc/dunst
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/dunst/ChangeLog,v 1.4 2013/06/16 16:11:18 wired Exp $

  16 Jun 2013; Alex Alexander <wired@gentoo.org> dunst-1.0.0.ebuild:
  added missing dunstify dep

  15 Jun 2013; Alex Alexander <wired@gentoo.org> dunst-1.0.0.ebuild:
  removed empty line

*dunst-1.0.0 (15 Jun 2013)

  15 Jun 2013; Alex Alexander <wired@gentoo.org> +dunst-1.0.0.ebuild,
  metadata.xml:
  version bump. bug #471584. thanks to René Neumann.

*dunst-0.5.0 (22 Feb 2013)

  22 Feb 2013; Alex Alexander <wired@gentoo.org> +dunst-0.5.0.ebuild,
  +metadata.xml:
  new ebuild for dunst
