@@ -4,23 +4,23 @@ Hash: SHA256
 DIST dunst-0.5.0.tar.bz2 28521 SHA256 4be8cf366930b297f03078f233f2fec479638d0c69b0e5e75bb49da487684b05 SHA512 3ce762295ea28b10539da6c5b9b4bffa41535d90544d933b2b81838f44a6d5d95c292a08048576b87db4f74592e5e068687743d7fda0dc3aa4aac06aa81ba7fd WHIRLPOOL ab1200ddadff1bcf6bbb5a56b464c4da2c045e9e074e1ada3e1841574dde21e4e672452130b7fffa9605fb20ab22870f9e49af2b32e15513f7dfa071be9958b1
 DIST dunst-1.0.0.tar.bz2 75306 SHA256 5c79ef11165421a4828453a42dfe9c60a4cb9d8743f970186a90c67e277f5280 SHA512 81490597ef8354d2c32838c72e03b121cf09d61e0fbef697a8adfb0c4783e45b3bb05790bf94cc1d0ed41e7f4b5f13a8edfdc65fec5569dc29966edd0807bfe1 WHIRLPOOL 724295fec6d284cc512944435a93df8c55b214d59d2b2b33c3fbf83e6a51db40b6ca15ce68446988dbeab695b0a907a4301124f35fb6748bed8c8143042b0bd9
 EBUILD dunst-0.5.0.ebuild 665 SHA256 0461cad24139694ae094d5e81f69b66573d05e93ce44abfec15bbfdb43e3d4a1 SHA512 5cc15d19eb754d1b7d83bfb3f8bf45cdef7ddbe35cb39378793a94cbf079b96a461dca131b72078d2d8591deb0213d2fbf2521e3330b0e14cb24349fcd3a78db WHIRLPOOL 5715917f970b2bd7ad68c6c8eb7585d718903f3e95bf3156940354838b7dc86c13af6a401b1c2778cd293a74a67ab4934e6a95215128436eb7e2ed4bac8d6f61
-EBUILD dunst-1.0.0.ebuild 1178 SHA256 ef84e590ba3deefb6d0db69fdb4d42f9d51ccb9a5dec8540ca0d7fc80b8a22cd SHA512 db85c99b327df031a5e19b68cf1163b0493cb6eb8e9bb7e4344edb0e0db290bb8ef8aea665e4bc1fc6d0e8940ed55f834f7896e41b7b018cd21c2bd0c944ee6a WHIRLPOOL 56c5d0bb821f6c3ec12e9ad416431e4f45dfdf913e7e76b9b8ecd92b89671977e6495d483d602afcbd285803c1bda6bdb67986c989d315809f5f6c594c3ce93a
-MISC ChangeLog 698 SHA256 7523f658b294430bc10342be28cca7bb941aaa2a1440e05f991627f7f16c6134 SHA512 abbddf1cbe8e1b76ffb10289a7cdbf787c0331c703819b0a9b7d4301238e54d03ea1739b8b1102eee93741511ce57d22a4937e5047910c38c4df7252a11d7aca WHIRLPOOL be005fdb0a148c93687fc13c4ebd61689436a3a2a5819b1378e560852588c8304ec3faa646d8fa0ada8a2094abec0a85adb671116f86703e378352c3f46a31bd
+EBUILD dunst-1.0.0.ebuild 1208 SHA256 30680ff265b8d5954325cf8f9cf9ba6905e4891ca30693f313765d7252cd1d95 SHA512 22a9b71b9a6483bdf79d8fe2820729e0124852049a50948d7542c245a5e4cd060ecbfa82846d23cf1a91344a65f45627d55f54055960c1945faf3dd9d69dbc4c WHIRLPOOL ae25a4f71f9f19024c7f2116e31a9d07720cc97f1f5f07f716a10568d39b328b450230626039dc7e8682a9be843867d982c410e51c4023c1449a13be04065b12
+MISC ChangeLog 802 SHA256 855146816bb6f0a7e3fbb7c749828a753420fee058c10b718217d853a102105c SHA512 50083458ffca225e69129b118f225d59d9f5d1f36b403cbb82c59cbff55f96c683bc0be0abe287f77df94dd179b79a81c9b90f3263c75ff5b5b196bb6778e5c6 WHIRLPOOL eb18e3e9b91ba0ef8b47b805e39becbd1ea09dc3a40a804f81778de56a0a5274cfebd426e27da58c59a4e7f483c7e7c96255870adc380196e7cfb50bba4cb21f
 MISC metadata.xml 320 SHA256 543f737d5231bd9ac15a9fc7a99f58c9fa46c4675c32a99cc6bb6a3cce4acb90 SHA512 d1d6de199c9fcab909fd80644ec5105199da12f71aaae9f808073b82579bca785038f57d04434f2403ece0e7996d6383ac0f0d728b35a7f417ecd5c3ca35fd9b WHIRLPOOL ceebb71ba514b6c71bafd3eb520adaf8714acb6feac282fff46840b6eb2a22007725e23769aea421952115f1aa5d6374400a5de6185ad5b22bea2bac87e31424
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRveQ1AAoJEDZF8K7rm0r63a8QAKFW5Ca8rcVvnU8Vc59TD1k+
-U3eqOj7J0PR+YKGUz1RrFxa2vXKSCTfGwrppp0DpvVP/aomuV6qhbH5uZNc9bTLE
-u9DGlq3GLddGOpdeti96uGfTNRGyh6jH4SV1Pi8s6H3zXAWJgLnZSELOhqxxi+8r
-BsMr3of5Mk55Nbyr2uNCp9giSxqm5Ms6A2oYL+M5O0jRDJ8DyVkcDoZcX02RLUj8
-oD7eBcYiOQBd0/rSXctJN3gw+RXqjQyFZ836nWGjKfdT/h5zcOUwJCgWxhnlsN1g
-LgtI32jI5HjygbUi3+BpNInxN+Yp64wg0UyIKS5q7pZ0sdptSzTlO+DYBdTmCvqG
-phtEfYuAy3q+BlwO9tmZf8f2Rfg8le4VowD+HpTc7cO6pJZDvSLAoWJ6kzB3ax66
-CPNE0cQ2tab6qX0nx7330WDiC8dnjIBCx8+w1C+43f4F4eeO/hKZLjuWFUq6WfeA
-OzPmApn41fWWq/ysQwqLQJDeDWBx69Bi/wfcbX0ukF7Zo7BC8i9gFth92/DIovsp
-hc75Lh7Mhx9w0SbxNBEwuXWChrGInYzNPROpOTjIvXJLX/hfHWawgdwgUhFVx2mC
-1zyJdIYUZsXxeOLkSX0AG2bWTLGep2Mt6V0Vj8K0OCnXwEzcjhe2RkrGvhQQ1fmD
-ZyOhZ3THsry8U56hQcEE
-=GcAo
+iQIcBAEBCAAGBQJSMfc/AAoJEDZF8K7rm0r6p2wP/39putrZOuRK0KTsKr4ATbUK
+G/tafs0MGN0m8O9+beD4+QaX2vSEfTtU5jmtGWHjxHtOSDty/3dwh2dOmpjqpjcc
+OQeMwE69YxtRQxtuNEqO+CIf+u0PTAKQhmy+Rd5l2AY6iopksH5utHPzlf083Ooy
+eKNj6JiJBpXFKKsoG9c5vwgNgCO0snpWt9crGm268RUcm1PX2c8vo1c+Ts0WAY2p
+Fa98BaOeLd57C0DPz7ts//cA0TFIerKwrzT5wrffwb0v/2Jzqpw/vUh0riuYi17/
+czeHh9aaBYba488vp7NEczDsVtn9f7bZ6+47yy7QKfBzaPJ7giUbASzDfMsaSGub
+L3er7k3vo0bKQXN/kZukdjfvv8O3e43yjHqSAoF4DLnQmUoRZ3bvHOsRysHigYQt
+XE1FVyuZPJkVCm5aPYI0jA7nBsdL9qYUxAbWT/MddXwxwm6OwL4qxltkN9wq8TSm
+neG1MNOWFB1pTZUVy7wI2HRVHQIXa2QYX9M/iN8rEm4TeVMPidoQUkG2FBmvTEML
+wEMNsfO17hp7KQz0fV7L26VuNdXzUBi0tBtBnbv+3EPsw6+h3Kd9gDyHWVnb2oIc
+k6Du9cVwh0RiBhZ0+1TJ/6dwDth8y5gX424CZMo7uJTSSvXRo7Wu/EVLgN4mpX31
+9KOsPsVV15R0e+wc2C77
+=Qwdi
 -----END PGP SIGNATURE-----
