@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/dunst
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/dunst/ChangeLog,v 1.4 2013/06/16 16:11:18 wired Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/dunst/ChangeLog,v 1.5 2013/09/12 17:16:38 wired Exp $
+
+  12 Sep 2013; Alex Alexander <wired@gentoo.org> dunst-1.0.0.ebuild:
+  epatch_user support, bug #484356
 
   16 Jun 2013; Alex Alexander <wired@gentoo.org> dunst-1.0.0.ebuild:
   added missing dunstify dep
@@ -19,4 +22,3 @@
   22 Feb 2013; Alex Alexander <wired@gentoo.org> +dunst-0.5.0.ebuild,
   +metadata.xml:
   new ebuild for dunst
-
